# nph

./: .gitignore  README.md  pyproject.toml
configs/: scenarios.json
r/: simulate_subgroup.R  simulate_subgroup_protocol_grid.R  strict_null_benchmarks.R
reports/: paper_subgroup.aux  paper_subgroup.bbl  paper_subgroup.blg  paper_subgroup.tex  paper_subgroup_protocol_full.aux  paper_subgroup_protocol_full.bbl  paper_subgroup_protocol_full.blg  paper_subgroup_protocol_full.tex  references.bib  report.tex  report_subgroup_extended.aux  report_subgroup_extended.tex
results/: ofat_all.csv  ofat_cens_prop.csv  ofat_hr_overall.csv  ofat_lambda0.csv  ofat_n_total.csv  ofat_prev.csv  ofat_rel.csv  scenario_dictionary.csv  scenario_metrics_long.csv  scenario_metrics_wide.csv  strict_null_benchmark.csv  subgroup_methods_summary.csv  subgroup_protocol_grid_summary.csv  subgroup_protocol_grid_summary_full.csv  summary_all.json  summary_null.json  summary_subgroup_mild.json  summary_subgroup_strong.json
scripts/: generate_protocol_full_paper.py  generate_research_paper.py  generate_subgroup_report.py  make_report.py
src/nph/: __init__.py  cli.py  paths.py  simulate_subgroup.R  simulate_subgroup.py  simulate_subgroup_protocol_grid.R  strict_null_benchmarks.R
tests/: test_imports.py
