[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nph"
version = "0.1.0"
description = "Simulation tooling for non-proportional hazards subgroup studies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
nph-simulate = "nph.cli:simulate_entrypoint"
nph-make-report = "nph.cli:make_report_entrypoint"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
